fix(treeview): reduce spacing between checkbox and item text

--- a/packages/bootstrap/scss/treeview/_theme.scss
+++ b/packages/bootstrap/scss/treeview/_theme.scss
@@ -14,6 +14,7 @@
         // Link
         .k-in {
             @include border-radius( $border-radius );
+            padding: $button-padding-y;
             transition: $transition;
         }
         .k-in.k-state-hover {
